test: improve MongoInfo coverage